2007/09/26 niteria
- Autocompletion window uses now the same font as the editor.
- Autocompletion window aligns itself with the text as good as possible.
  such that typed text and suggestions are horizontally aligned.
- Autocompletion window placement and sizing has been enhanced.
  It now tries to maximize the shown content while still maintaining
  a reasonable placement below the typed text.
- Autocompletion window can now be resized by the user.
- Fixed Autocompletion bug where the cursor was at the wrong position after insertion.

2007/08/07 niteria
- Texoutsource dialog: added the possibility to open the new file in background or foreground.
- Added the "Outsource Text..." command to the context menu of the editor.

2007/08/06 niteria
- New feature to create a new file from the selected text.
  The new file will be included using \input{}, \include{}, or some user defined command.

2007/07/21 niteria
- Modified Autocompletion behavior to be similar to Visual Studio
  and other editors where only the part before the cursor is considered.
  Furthermore, labels can be completed as well.
- Modified comment behavior to be similar to Visual Studio and other editors.
  We start the comment always at the beginning of the line.

2007/07/05 niteria
- Added some new tips and edited some old ones.
- Fixed Bug 1734335: No automatic saving when file is closed (context menu)
- Fixed some stuff related to crashes with long lines and words.
  The spell checker should not crash anymore on long words. It doesn't care about long lines.
  The latex parser did crash on specific long lines with lots of backslashes etc.
  Now, the latex parser avoids stack overflows by explicitly checking the number of recursive calls.
  However, such long lines (40KB) can not be handled by the painting code in Crystal... This one crashes.
- Fixed some small typos.  

2007/01/23 niteria
- Removed option to disable word wrap due to crashes caused by the spell checker.

2007/01/19 niteria